tests/NormalTests/paczka2/big_fuzzy/93721923.err
Error in line 9: cP1MnGcFRS A767 88,8
Error in line 10: Ni7 A736 20,7
Error in line 20: GbViYg 187 246,3
Error in line 15: GbViYg S187 52,3
Error in line 21: LUMLCVnJi3 A736 82,7
Error in line 39: cP1MnGcFRS A736 32,7
Error in line 41: GbViYg A736 59,1
Error in line 44: GbViYg A352 16,4
Error in line 48: GbViYg A767 46,6
Error in line 32: A352 A736 89,7
Error in line 49: cP1MnGcFRS A767 1,6
Error in line 58: A352 A736 73,99
Error in line 51: Ni7 A767 0,6
Error in line 56: A352 A352 214,7
Error in line 50: GbViYg A352 32,4
Error in line 60: Ni7 A352 37,8
Error in line 67: GbViYg A767 72,2
Error in line 76: Ni7 A736 13,1
Error in line 90: GbViYg A736 84,33
Error in line 87: Ni7 S187 23,4
Error in line 61: A352 A736 269,0
Error in line 100: cP MnGcFRS A767 32,3
Error in line 111: LUMLCVnJi3 A352 79,6
Error in line 114: cP1MnGcFRS A767 124,0
Error in line 131: cP1MnGcFRS A352 8,6
Error in line 118: Ni7 A352 49,2
Error in line 143: cP1MnGcFRS A352 7,6
Error in line 138: LUMLCVnJi3 S187 55,7
Error in line 151: cP1MnGcFRS A767 -2,3
Error in line 149: LUMLCVnJi3 A736 102,9
Error in line 154: dVOzDDc A352 28,3
Error in line 158: LUMLCVnJi3 S187 42,4
Error in line 146: cP1MnGcFRS A767 33,9
Error in line 155: dVOzDDc A736 318,4
Error in line 180: 7o7FqpC67 A736 3,1
Error in line 188: GbViYg A352 20,1
Error in line 200: dVOzDDc A767 54,2
Error in line 199: Ni7 A767 72,4
Error in line 220: A352 A352 39,4
Error in line 213: dVOzDDc A736 109,9
Error in line 234: cP1MnGcFRS A73 159,3
Error in line 236: cP1MnGcFRS S187 93,7
Error in line 231: LUMLCVnJi3 S187 80,7
Error in line 239: GbViYg A736 74,4
Error in line 238: LUMLCVnJi3 A352 34,1
Error in line 240: GbViYg A352 18,9
Error in line 235: dVOzDDc S187 74,2
